Apply rounded styling

--- a/src/App/Client/GoldEx.Client/Pages/Calculate/Components/Calculator.razor
+++ b/src/App/Client/GoldEx.Client/Pages/Calculate/Components/Calculator.razor
@@ -9,7 +9,7 @@
                 <MudItem xs="12" sm="6" md="4">
                     @if (_isInitialLoading || _isBarcodeProcessing)
                     {
-                        <MudSkeleton SkeletonType="SkeletonType.Rectangle" Width="100%" Height="56px" Animation="Animation.Wave" />
+                        <MudSkeleton Class="rounded-5" SkeletonType="SkeletonType.Rectangle" Width="100%" Height="56px" Animation="Animation.Wave" />
                     }
                     else
                     {
@@ -31,7 +31,7 @@
                 <MudItem xs="12" sm="6" md="4">
                     @if (_isInitialLoading)
                     {
-                        <MudSkeleton SkeletonType="SkeletonType.Rectangle" Width="100%" Height="56px" Animation="Animation.Wave" />
+                        <MudSkeleton Class="rounded-5" SkeletonType="SkeletonType.Rectangle" Width="100%" Height="56px" Animation="Animation.Wave" />
                     }
                     else
                     {
@@ -64,7 +64,7 @@
         <div class="d-flex flex-column flex-wrap align-center gap-3 mt-3">
             @if (_isInitialLoading)
             {
-                <MudSkeleton SkeletonType="SkeletonType.Rectangle" Width="100%" Height="30px" Animation="Animation.Wave" Class="mb-2" />
+                <MudSkeleton Class="rounded-5 mb-2" SkeletonType="SkeletonType.Rectangle" Width="100%" Height="30px" Animation="Animation.Wave" />
             }
             else
             {
@@ -84,7 +84,7 @@
             <MudItem xs="12" sm="6">
                 @if (_isInitialLoading || _isBarcodeProcessing)
                 {
-                    <MudSkeleton SkeletonType="SkeletonType.Rectangle" Width="100%" Height="56px" Animation="Animation.Wave" />
+                    <MudSkeleton Class="rounded-5" SkeletonType="SkeletonType.Rectangle" Width="100%" Height="56px" Animation="Animation.Wave" />
                 }
                 else
                 {
@@ -106,7 +106,7 @@
             <MudItem xs="12" sm="6">
                 @if (_isInitialLoading || _isBarcodeProcessing)
                 {
-                    <MudSkeleton SkeletonType="SkeletonType.Rectangle" Width="100%" Height="56px" Animation="Animation.Wave" />
+                    <MudSkeleton Class="rounded-5" SkeletonType="SkeletonType.Rectangle" Width="100%" Height="56px" Animation="Animation.Wave" />
                 }
                 else
                 {
@@ -128,7 +128,7 @@
             <MudItem xs="12" sm="6">
                 @if (_isInitialLoading || _isBarcodeProcessing)
                 {
-                    <MudSkeleton SkeletonType="SkeletonType.Rectangle" Width="100%" Height="56px" Animation="Animation.Wave" />
+                    <MudSkeleton Class="rounded-5" SkeletonType="SkeletonType.Rectangle" Width="100%" Height="56px" Animation="Animation.Wave" />
                 }
                 else
                 {
@@ -154,7 +154,7 @@
                 <MudItem xs="12" sm="6">
                     @if (_isInitialLoading || _isBarcodeProcessing)
                     {
-                        <MudSkeleton SkeletonType="SkeletonType.Rectangle" Width="100%" Height="56px" Animation="Animation.Wave" />
+                        <MudSkeleton Class="rounded-5" SkeletonType="SkeletonType.Rectangle" Width="100%" Height="56px" Animation="Animation.Wave" />
                     }
                     else
                     {
@@ -179,7 +179,7 @@
                 <MudItem xs="12" sm="6">
                     @if (_isInitialLoading || _isBarcodeProcessing)
                     {
-                        <MudSkeleton SkeletonType="SkeletonType.Rectangle" Width="100%" Height="56px" Animation="Animation.Wave" />
+                        <MudSkeleton Class="rounded-5" SkeletonType="SkeletonType.Rectangle" Width="100%" Height="56px" Animation="Animation.Wave" />
                     }
                     else
                     {
@@ -225,7 +225,7 @@
                     <MudItem xs="12" sm="6">
                         @if (_isInitialLoading || _isBarcodeProcessing)
                         {
-                            <MudSkeleton SkeletonType="SkeletonType.Rectangle" Width="100%" Height="56px" Animation="Animation.Wave" />
+                            <MudSkeleton Class="rounded-5" SkeletonType="SkeletonType.Rectangle" Width="100%" Height="56px" Animation="Animation.Wave" />
                         }
                         else
                         {
@@ -246,7 +246,7 @@
                 <MudItem xs="12" sm="6">
                     @if (_isInitialLoading || _isBarcodeProcessing)
                     {
-                        <MudSkeleton SkeletonType="SkeletonType.Rectangle" Width="100%" Height="56px" Animation="Animation.Wave" />
+                        <MudSkeleton Class="rounded-5" SkeletonType="SkeletonType.Rectangle" Width="100%" Height="56px" Animation="Animation.Wave" />
                     }
                     else
                     {
@@ -270,7 +270,7 @@
             <MudItem xs="12" sm="6">
                 @if (_isInitialLoading || _isBarcodeProcessing)
                 {
-                    <MudSkeleton SkeletonType="SkeletonType.Rectangle" Width="100%" Height="56px" Animation="Animation.Wave" />
+                    <MudSkeleton Class="rounded-5" SkeletonType="SkeletonType.Rectangle" Width="100%" Height="56px" Animation="Animation.Wave" />
                 }
                 else
                 {
@@ -296,12 +296,12 @@
                 @if (_isRecalculating)
                 {
                     <MudExpansionPanel Text="در حال محاسبه...">
-                        <MudSkeleton SkeletonType="SkeletonType.Rectangle" Width="100%" Height="20px" Class="my-2" Animation="Animation.Wave" />
-                        <MudSkeleton SkeletonType="SkeletonType.Rectangle" Width="100%" Height="20px" Class="my-2" Animation="Animation.Wave" />
-                        <MudSkeleton SkeletonType="SkeletonType.Rectangle" Width="100%" Height="20px" Class="my-2" Animation="Animation.Wave" />
-                        <MudSkeleton SkeletonType="SkeletonType.Rectangle" Width="100%" Height="20px" Class="my-2" Animation="Animation.Wave" />
-                        <MudSkeleton SkeletonType="SkeletonType.Rectangle" Width="100%" Height="20px" Class="my-2" Animation="Animation.Wave" />
-                        <MudSkeleton SkeletonType="SkeletonType.Rectangle" Width="100%" Height="30px" Class="mt-4" Animation="Animation.Wave" />
+                        <MudSkeleton Class="rounded-5 my-2" SkeletonType="SkeletonType.Rectangle" Width="100%" Height="20px" Animation="Animation.Wave" />
+                        <MudSkeleton Class="rounded-5 my-2" SkeletonType="SkeletonType.Rectangle" Width="100%" Height="20px" Animation="Animation.Wave" />
+                        <MudSkeleton Class="rounded-5 my-2" SkeletonType="SkeletonType.Rectangle" Width="100%" Height="20px" Animation="Animation.Wave" />
+                        <MudSkeleton Class="rounded-5 my-2" SkeletonType="SkeletonType.Rectangle" Width="100%" Height="20px" Animation="Animation.Wave" />
+                        <MudSkeleton Class="rounded-5 my-2" SkeletonType="SkeletonType.Rectangle" Width="100%" Height="20px" Animation="Animation.Wave" />
+                        <MudSkeleton Class="rounded-5 my-4" SkeletonType="SkeletonType.Rectangle" Width="100%" Height="30px" Animation="Animation.Wave" />
                     </MudExpansionPanel>
                 }
                 else
