--- a/src/App/Client/GoldEx.Client/Pages/Customers/Components/CustomersList.razor
+++ b/src/App/Client/GoldEx.Client/Pages/Customers/Components/CustomersList.razor
@@ -8,11 +8,11 @@
         <MudSpacer />
 
         <MudHidden Breakpoint="Breakpoint.SmAndDown">
-            <MudFab Class="ml-4" Color="Color.Success" EndIcon="@Icons.Material.Filled.Add" Label="ثبت مشتری جدید" OnClick="@(_ => OnCreate())" Size="Size.Small" />
+            <MudButton Class="ml-4" Color="Color.Primary" EndIcon="@Icons.Material.Filled.Add" OnClick="@(_ => OnCreate())" Size="Size.Small" Variant="Variant.Filled">ثبت مشتری جدید</MudButton>
         </MudHidden>
 
         <MudHidden Breakpoint="Breakpoint.MdAndUp">
-            <MudFab Class="ml-4" Color="Color.Success" EndIcon="@Icons.Material.Filled.Add" OnClick="@(_ => OnCreate())" Size="Size.Small" />
+            <MudIconButton Color="@Color.Primary" Icon="@Icons.Material.Filled.Add" OnClick="@(_ => OnCreate())" Size="@Size.Small" Variant="@Variant.Filled"></MudIconButton>
         </MudHidden>
     </ToolBarContent>
     <HeaderContent>
@@ -30,13 +30,16 @@
         <MudTd DataLabel="عملیات">
             <div class="d-flex gap-2">
                 <MudTooltip Text="مشاهده تراکنش های مشتری">
-                    <MudFab Color="Color.Info" EndIcon="@Icons.Material.Filled.DocumentScanner" Size="Size.Small" OnClick="_ => OnViewTransaction(context)" />
+                    <MudIconButton Icon="@Icons.Material.Filled.DocumentScanner" Size="Size.Small" Variant="Variant.Filled"
+                                   Color="Color.Success" OnClick="_ => OnViewTransaction(context)"></MudIconButton>
                 </MudTooltip>
                 <MudTooltip Text="ویرایش">
-                    <MudFab Color="Color.Primary" EndIcon="@Icons.Material.Filled.Edit" Size="Size.Small" OnClick="_ => OnEdit(context)" />
+                    <MudIconButton Icon="@Icons.Material.Filled.Edit" Size="Size.Small" Variant="Variant.Filled"
+                                   Color="Color.Primary" OnClick="_ => OnEdit(context)"></MudIconButton>
                 </MudTooltip>
                 <MudTooltip Text="حذف">
-                    <MudFab Color="Color.Error" EndIcon="@Icons.Material.Filled.Delete" Size="Size.Small" OnClick="_ => OnRemove(context)" />
+                    <MudIconButton OnClick="@(_ => OnRemove(context))" ClickPropagation="true"
+                                   Size="@Size.Small" Variant="@Variant.Filled" Icon="@Icons.Material.Filled.Delete" Color="@Color.Error"></MudIconButton>
                 </MudTooltip>
             </div>
         </MudTd>
