--- a/src/App/Server/GoldEx.Server/Components/Account/Pages/Manage/Email.razor
+++ b/src/App/Server/GoldEx.Server/Components/Account/Pages/Manage/Email.razor
@@ -13,7 +13,7 @@
 <StatusMessage Message="@_message" />
 @if (!_isEmailConfirmed)
 {
-    <MudAlert Severity="Severity.Warning" ContentAlignment="HorizontalAlignment.Start">
+    <MudAlert Severity="Severity.Info" ContentAlignment="HorizontalAlignment.Start" Variant="Variant.Text" Class="mb-4">
         <p>
             آدرس ایمیل شما تایید نشده است. برای تایید ایمیل خود، گزینه فعالسازی را انتخاب کنید
         </p>
